Author: Stephen Hansen <shansen@advpubtech.com>
Maintainer: Steffen Hoffmann <hoff.st@web.de>

breadcrumbsnav-0.3 (not yet released)
 resolved issues
 fix handling of empty crumbs list an the list label in that situation


breadcrumbsnav-0.2 (09-Nov-2011) - branch 0.11
 resolved issues
 #2463: Shows non-visited tickets
 #3965: BreadCrumbsNavPlugin produces invalid xhtml (strict)
 #4037: Default configuration for "paths" configuration seems unintended
 #4411: breadcrumbs.css contains invalid rule
 #7036: ignore_pattern option doesn't work

 new features
 #7231: Make label "Breadcrumbs:" configurable


breadcrumbsnav-0.1 (14-Jan-2008) - branch 0.11
 initial release
  update: add option to configure bread-crumb-trackable resources (16-Jan-2008)